fix: add spaing between achievement cards on small and medium screens

--- a/static/sass/_pattern_cards.scss
+++ b/static/sass/_pattern_cards.scss
@@ -17,6 +17,13 @@
     padding-right: 0;
   }
 
+  // Hack the grid to add vertical spacing between rows of achievement cards on screens where
+  .p-achievement-cards-grid {
+    @media screen and (width < $breakpoint-large) {
+      row-gap: $spv--large;
+    }
+  }
+
   .p-card--achievement__icon {
     align-self: flex-start;
     display: block;
